[package]
name = "pano"
version = "0.1.0"
edition = "2018"
authors = ["Pavel Perina <pavel.perina@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="1.4"
lodepng="3.4"
rayon = "1.5"
nalgebra = "0.29"
#serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
#cairo-rs = "0.14"
conv = "0.3.3"
transpose = "0.2.1"

